--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,16 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/loader.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/loader.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/navbar.css">
-	<link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,800" rel="stylesheet">
-	<script src="js/jquery-2.1.1.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/typed.js"></script>
-	<script src="js/main.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,800" rel="stylesheet">
+
 </head>
 
 <body>
@@ -55,7 +52,7 @@
           </label>
 
           <a data-spy="scroll" href="#aboutme" class="menu-item"> <i class="fa fa-user-circle"></i> </a>
-          <a data-spy="scroll" href="#skills" class="menu-item"> <i class="fa fa-plus"></i> </a>
+          <a data-spy="scroll" href="#skills" class="menu-item"> <i class="fa fa-pie-chart"></i> </a>
           <a data-spy="scroll" href="#" class="menu-item"> <i class="fa fa-heart"></i> </a>
           <a data-spy="scroll" href="#" class="menu-item"> <i class="fa fa-envelope"></i> </a>
 
@@ -129,7 +126,7 @@
         </div> <!-- End Skill Bar -->
 
         <div class="skillbar clearfix " data-percent="75%">
-            <div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
+            <div class="skillbar-title" style="background: #333333;"><span>Linux</span></div>
             <div class="skillbar-bar" style="background: #525252;"></div>
             <div class="skill-bar-percent">75%</div>
         </div> <!-- End Skill Bar -->
@@ -147,9 +144,27 @@
         </div> <!-- End Skill Bar -->
     </div>
 </div>
+<div class="horizontalrule"></div>
+<div class="fullscreen background parallax" id="internship" data-img-width="1366" data-img-height="665" data-diff="100">
+
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/typed.js"></script>
+<script src="js/main.js"></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-104068975-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 <script>
 $(document).ready(function() {
-$(".preloader").delay(10).fadeOut("slow");
+$(".preloader").delay(4000).fadeOut("slow");
 });
 $(".next").click(function() {
    $('html,body').animate({ scrollTop:$(this).parent().next().offset().top}, 'slow');
