--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,6 +1,8 @@
 .Hero {
   height: 100vh;
   overflow: hidden;
+  padding-top: 70px;
+
   .PhotoContainer {
     img {
       // image-rendering: pixelated;
@@ -11,15 +13,16 @@
       z-index: 3;
     }
   }
-  #tsparticles {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    left: 0;
-  }
+
+  //#tsparticles {
+  //  width: 100%;
+  //  height: 100%;
+  //  position: absolute;
+  //  margin: 0;
+  //  padding: 0;
+  //  top: 0;
+  //  left: 0;
+  //}
 }
 
 .BackgroundCircle {
@@ -30,6 +33,5 @@
   border-radius: 50%;
   position: absolute;
   bottom: 0;
-  z-index: 2;
 }
 
