Projects section added

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -96,3 +96,8 @@
   position: absolute;
   bottom: -10px;
 }
+
+:root {
+  --swiper-navigation-color: white !important;
+  --swiper-theme-color: white !important;
+}
