--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,4 +1,5 @@
 .Hero {
+  position: relative;
   height: 100vh;
   overflow: hidden;
   padding-top: 70px;
@@ -36,7 +37,12 @@
 }
 
 .Particles {
-  position: fixed;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
   z-index: -1;
 }
